# Flags to set
AM_CFLAGS = -std=c99 -Wall -Wextra

# Target
bin_PROGRAMS = repo
repo_SOURCES = main.c \
               repo.h \
               update.c \
               sync.c \
               common.h common.c \
               bm_config.h bm_config.c \
               bm_util.h bm_util.c \
               bm_string.h bm_string.c \
               bm_list.h bm_list.c
