# Flags to set
# another possibility is -pedantic
AM_CFLAGS = -std=c99 -Wall -Wextra -pedantic

# Target
bin_PROGRAMS = repo
repo_SOURCES = repo.h main.c \
               actions.h actions.c \
               bm_config.h bm_config.c \
               bm_util.h bm_util.c \
               bm_string.h bm_string.c \
               bm_list.h bm_list.c
